--- a/algorithm/监督性学习.0.3.ipynb
+++ b/algorithm/监督性学习.0.3.ipynb
@@ -1,11 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# knnアルゴリズムに基づく機械学習予測モデル\n",
+    "### 目的：人の持っている属性から、この人が民主党か共和党かを予測する"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#必要なモジュールを導入する\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -22,6 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#csvファイルから生データの読み取り、pythonのデータフレームワークに保存する\n",
     "df = pd.read_csv(\"congressional_voting_dataset.csv\")"
    ]
   },
@@ -31,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#convert string to number\n",
+    "#トレーニングするためのデータ前処理：文字列から数字への変換＆null値の処理\n",
     "df = df.replace('y', 1).replace('n', 0).replace('?', np.nan).dropna().replace('democrat',0).replace('republican',1)"
    ]
   },
@@ -242,6 +252,7 @@
     }
    ],
    "source": [
+    "#処理後データの様子を覗く\n",
     "df.head(5)"
    ]
   },
@@ -251,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#define features and label\n",
+    "#「属性」と「ラベル」になる項目を分ける\n",
     "y = df['political_party'].values\n",
     "X = df.drop('political_party', axis = 1).values"
    ]
@@ -262,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#seperate training set and test set\n",
+    "#トレーニングデータとテストデータセットを分ける（6:4）\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.4, random_state = 121, stratify = y)"
    ]
   },
@@ -272,7 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#set k-value of knn model\n",
+    "#K近隣分類器を呼び出し、k値（パラメータ：最も近い参照になるデータポイント数）を設定\n",
     "knn = KNeighborsClassifier(n_neighbors = 8)"
    ]
   },
@@ -295,7 +306,7 @@
     }
    ],
    "source": [
-    "#fitting on training data set\n",
+    "#トレーニングデータを分類器に投げで、モデルを訓練する\n",
     "knn.fit(X_train,y_train)"
    ]
   },
@@ -305,7 +316,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#make prediction on test data set \n",
+    "#テストデータを訓練されたモデルに投げで、予測結果を取得\n",
     "y_pred = knn.predict(X_test)"
    ]
   },
@@ -324,7 +335,7 @@
     }
    ],
    "source": [
-    "#get matrix: {[tp,fn],[fp,tn]}\n",
+    "#混同行列結果をプリントする: {[真陽性,偽陰性],[偽陽性,真陰性]}\n",
     "print(confusion_matrix(y_test,y_pred))"
    ]
   },
@@ -348,6 +359,7 @@
     }
    ],
    "source": [
+    "#分類レポートをプリントする（訓練されたモデルのパフォーマンス評価レポート）\n",
     "print(classification_report(y_test,y_pred))"
    ]
   },
@@ -357,6 +369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#ROC曲線の第二引数の設定\n",
     "y_pred_prob = knn.predict_proba(X_test)[:,1]"
    ]
   },
@@ -366,6 +379,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#ROC曲線の三要素の生成\n",
     "fpr,tpr,threshold = roc_curve(y_test, y_pred_prob)"
    ]
   },
@@ -386,6 +400,7 @@
     }
    ],
    "source": [
+    "#ROC曲線の作成\n",
     "plt.plot([0,1],[0,1], 'k--')\n",
     "plt.plot(fpr,tpr)\n",
     "plt.xlabel('False Positive Rate')\n",
@@ -411,7 +426,7 @@
     }
    ],
    "source": [
-    "#calculate AUC(area under curve)\n",
+    "#AUCの計算(area under curve)\n",
     "roc_auc_score(y_test, y_pred_prob)"
    ]
   },
@@ -429,7 +444,7 @@
     }
    ],
    "source": [
-    "#use cross-fold validation to get 5 auc scores\n",
+    "#交差検定による五つの評価点数の計算\n",
     "cv_scores = cross_val_score(knn, X, y,cv = 5, scoring = 'roc_auc')\n",
     "print(cv_scores)"
    ]
@@ -440,10 +455,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#tuning hyperparameter\n",
-    "param_grid = {'n_neighbors': list(range(1,50))} #define hyperparameter range\n",
-    "knn2 = KNeighborsClassifier()\n",
-    "knn2_cv = GridSearchCV(knn2, param_grid, cv = 5, scoring='accuracy')#define cross-fold validation parameters"
+    "#ハイパーパラメーターの調整\n",
+    "param_grid = {'n_neighbors': list(range(1,50))} #先ずはハイパーパラメーターの範囲指定\n",
+    "knn2 = KNeighborsClassifier()#分類器を改めて呼び出す（新しモデル作るため）\n",
+    "knn2_cv = GridSearchCV(knn2, param_grid, cv = 5, scoring='accuracy')#グリードサーチ交差検定のパラメータを定義する"
    ]
   },
   {
@@ -470,7 +485,7 @@
     }
    ],
    "source": [
-    "knn2_cv.fit(X_train,y_train) #test k-value from 1 to 50 "
+    "knn2_cv.fit(X_train,y_train) #ハイパーパラメーター（k値）を1から50までの50個モデル生成"
    ]
   },
   {
@@ -487,7 +502,7 @@
     }
    ],
    "source": [
-    "print(\"Best k-value:{}\".format(knn2_cv.best_params_)) #find the best k-value"
+    "print(\"Best k-value:{}\".format(knn2_cv.best_params_)) #最優ハイパーパラメーター（k値）を洗い出す"
    ]
   },
   {
@@ -504,7 +519,7 @@
     }
    ],
    "source": [
-    "print(\"Best Score:{}\".format(knn2_cv.best_score_)) #find the best performance socre of the model"
+    "print(\"Best Score:{}\".format(knn2_cv.best_score_)) #最優ハイパーパラメーター（k値）に基づく予測モデルのパフォーマンス評価点数"
    ]
   }
  ],
